# Py-Templates

./: README.md  hook.sh
notebook/src/.ipynb_checkpoints/: main-checkpoint.ipynb
script/src/: main.py  pyproject.toml  utils.py
script/src/test/src/: main.py  utils.py
